@@ -1,6 +1,7 @@
 <h3>0.13.7</h3>
 <ul>
     <li>#232 PersistentStringParameter not supported</li>
+    <li>#234 Can't seem to connect to my jenkins server with the latest version 0.13.6-2020.1</li>
 </ul>
 <h3>0.13.6</h3>
 <ul>
